GNU bug report logs - #23879
visual-line-mode produces erratic behaviour with text properties

Previous Next

Package: emacs;

Reported by: Paul Rankin <hello <at> paulwrankin.com>

Date: Fri, 1 Jul 2016 08:35:01 UTC

Severity: normal

Done: Eli Zaretskii <eliz <at> gnu.org>

Bug is archived. No further changes may be made.

To add a comment to this bug, you must first unarchive it, by sending
a message to control AT debbugs.gnu.org, with unarchive 23879 in the body.
You can then email your comments to 23879 AT debbugs.gnu.org in the normal way.

Toggle the display of automated, internal messages from the tracker.

View this report as an mbox folder, status mbox, maintainer mbox


Report forwarded to bug-gnu-emacs <at> gnu.org:
bug#23879; Package emacs. (Fri, 01 Jul 2016 08:35:02 GMT) Full text and rfc822 format available.

Acknowledgement sent to Paul Rankin <hello <at> paulwrankin.com>:
New bug report received and forwarded. Copy sent to bug-gnu-emacs <at> gnu.org. (Fri, 01 Jul 2016 08:35:02 GMT) Full text and rfc822 format available.

Message #5 received at submit <at> debbugs.gnu.org (full text, mbox):

From: Paul Rankin <hello <at> paulwrankin.com>
To: bug-gnu-emacs <at> gnu.org
Subject: visual-line-mode produces erratic behaviour with text properties
Date: Fri, 01 Jul 2016 18:33:48 +1000
Enabling visual-line-mode and adding line-prefix and wrap-prefix properties to a long paragraph of text produces erratic navigational behaviour.

To reproduce:

1. $ emacs -Q

2. insert a long paragraph of text
M-: (url-insert-file-contents "https://gist.githubusercontent.com/rnkn/d5987c3495901e4950782f6648846e4e/raw/c22074e8f0940f6ec9c8b729f04567dc50664823/loren-ipsum.txt")

3. turn on visual line mode
M-: (visual-line-mode 1)

4. add text properties
M-: (add-text-properties (point-min) (point-max) '(line-prefix (space :align-to 10) wrap-prefix (space :align-to 10)))

5. C-n past window height.

Expected results:

Navigation should continue by visual line.

Actual results:

Navigational behaviour becomes erratic. Point will no long move with visual lines, instead jumping to different columns. This is more pronounced with a window 80 columns or less.

Configuration:

GNU Emacs 24.5.1 (x86_64-apple-darwin15.5.0, NS apple-appkit-1404.47) of 2016-06-26

Configured using:
 `configure --disable-dependency-tracking --disable-silent-rules
 --enable-locallisppath=/usr/local/share/emacs/site-lisp
 --infodir=/usr/local/Cellar/emacs/24.5/share/info/emacs
 --prefix=/usr/local/Cellar/emacs/24.5 --with-xml2 --without-dbus
 --without-gnutls --with-ns --disable-ns-self-contained'

OS X 10.11.4 (15E65)

MacBook Pro (Retina, 15-inch, Mid 2014)
2.2 GHz Intel Core i7
16 GB 1600 MHz DDR3
Intel Iris Pro 1536 MB

-- 
Paul W. Rankin
www.paulwrankin.com




Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#23879; Package emacs. (Fri, 01 Jul 2016 09:38:01 GMT) Full text and rfc822 format available.

Message #8 received at 23879 <at> debbugs.gnu.org (full text, mbox):

From: Eli Zaretskii <eliz <at> gnu.org>
To: Paul Rankin <hello <at> paulwrankin.com>
Cc: 23879 <at> debbugs.gnu.org
Subject: Re: bug#23879: visual-line-mode produces erratic behaviour with text
 properties
Date: Fri, 01 Jul 2016 12:37:31 +0300
> From: Paul Rankin <hello <at> paulwrankin.com>
> Date: Fri, 01 Jul 2016 18:33:48 +1000
> 
> 1. $ emacs -Q
> 
> 2. insert a long paragraph of text
> M-: (url-insert-file-contents "https://gist.githubusercontent.com/rnkn/d5987c3495901e4950782f6648846e4e/raw/c22074e8f0940f6ec9c8b729f04567dc50664823/loren-ipsum.txt")
> 
> 3. turn on visual line mode
> M-: (visual-line-mode 1)
> 
> 4. add text properties
> M-: (add-text-properties (point-min) (point-max) '(line-prefix (space :align-to 10) wrap-prefix (space :align-to 10)))
> 
> 5. C-n past window height.
> 
> Expected results:
> 
> Navigation should continue by visual line.
> 
> Actual results:
> 
> Navigational behaviour becomes erratic. Point will no long move with visual lines, instead jumping to different columns. This is more pronounced with a window 80 columns or less.

Initial investigation indicates that this is a very old problem: I see
it in Emacs 23.1, which is when visual-line-mode was introduced.




Reply sent to Eli Zaretskii <eliz <at> gnu.org>:
You have taken responsibility. (Sat, 02 Jul 2016 12:43:01 GMT) Full text and rfc822 format available.

Notification sent to Paul Rankin <hello <at> paulwrankin.com>:
bug acknowledged by developer. (Sat, 02 Jul 2016 12:43:01 GMT) Full text and rfc822 format available.

Message #13 received at 23879-done <at> debbugs.gnu.org (full text, mbox):

From: Eli Zaretskii <eliz <at> gnu.org>
To: hello <at> paulwrankin.com
Cc: 23879-done <at> debbugs.gnu.org
Subject: Re: bug#23879: visual-line-mode produces erratic behaviour with text
 properties
Date: Sat, 02 Jul 2016 15:41:59 +0300
> Date: Fri, 01 Jul 2016 12:37:31 +0300
> From: Eli Zaretskii <eliz <at> gnu.org>
> Cc: 23879 <at> debbugs.gnu.org
> 
> Initial investigation indicates that this is a very old problem: I see
> it in Emacs 23.1, which is when visual-line-mode was introduced.

Indeed, a very old bug, now fixed on the master branch.

Thanks.




Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#23879; Package emacs. (Sun, 03 Jul 2016 06:50:02 GMT) Full text and rfc822 format available.

Message #16 received at 23879 <at> debbugs.gnu.org (full text, mbox):

From: Paul Rankin <hello <at> paulwrankin.com>
To: 23879 <at> debbugs.gnu.org
Subject: Re: bug#23879: closed (Re: bug#23879: visual-line-mode produces
 erratic behaviour with text properties)
Date: Sun, 03 Jul 2016 16:49:04 +1000
I can confirm the issue appears fixed on HEAD but not devel (25.0.95).

Is there a way I can go about tracking the version in which this fix will be included?




Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#23879; Package emacs. (Sun, 03 Jul 2016 07:47:01 GMT) Full text and rfc822 format available.

Message #19 received at 23879 <at> debbugs.gnu.org (full text, mbox):

From: Eli Zaretskii <eliz <at> gnu.org>
To: Paul Rankin <hello <at> paulwrankin.com>
Cc: 23879 <at> debbugs.gnu.org
Subject: Re: bug#23879: closed (Re: bug#23879: visual-line-mode produces
 erratic behaviour with text properties)
Date: Sun, 03 Jul 2016 10:46:19 +0300
> From: Paul Rankin <hello <at> paulwrankin.com>
> Date: Sun, 03 Jul 2016 16:49:04 +1000
> 
> I can confirm the issue appears fixed on HEAD but not devel (25.0.95).

I fixed this only on master, since the bug is very old.

> Is there a way I can go about tracking the version in which this fix will be included?

Not before 25.2.




Information forwarded to bug-gnu-emacs <at> gnu.org:
bug#23879; Package emacs. (Mon, 04 Jul 2016 16:43:01 GMT) Full text and rfc822 format available.

Message #22 received at 23879 <at> debbugs.gnu.org (full text, mbox):

From: Glenn Morris <rgm <at> gnu.org>
To: Paul Rankin <hello <at> paulwrankin.com>
Cc: 23879 <at> debbugs.gnu.org
Subject: Re: bug#23879: closed (Re: bug#23879: visual-line-mode produces
 erratic behaviour with text properties)
Date: Mon, 04 Jul 2016 12:41:42 -0400
Paul Rankin wrote:

> I can confirm the issue appears fixed on HEAD but not devel (25.0.95).
>
> Is there a way I can go about tracking the version in which this fix
> will be included?

It's easy for people closing bugs to include the version information
when they do so, in a way that debbugs can pick up.
(But whether Emacs sticks to that release schedule is another matter.)




bug archived. Request was from Debbugs Internal Request <help-debbugs <at> gnu.org> to internal_control <at> debbugs.gnu.org. (Tue, 02 Aug 2016 11:24:03 GMT) Full text and rfc822 format available.

This bug report was last modified 9 years and 157 days ago.

Previous Next


GNU bug tracking system
Copyright (C) 1999 Darren O. Benham, 1997,2003 nCipher Corporation Ltd, 1994-97 Ian Jackson.